# modular-hvp

./: README.md  pyproject.toml
benchmarks/: __init__.py  compare_gpt_qkv_blocks.py  compare_mlp_full_hvp.py  compare_mlp_linear_blocks.py  compare_qkv_grouping.py  compare_resnet20.py  compare_resnet20_conv_linear_blocks.py  compare_toy_cnn.py  compare_toy_mlp.py  compare_toy_transformer.py  depth_sweep_mlp.py
benchmarks/results/: depth_sweep_width256.json  mlp_full_hvp.json  mlp_linear_blocks.json  qkv_grouping.json  resnet20_conv_linear_blocks.json
src/modular_hvp/: __init__.py  api.py  backend.py  block_dual.py  block_graph.py  dispatch.py  dual.py  eager.py  graph.py  graph_tangent.py  graph_tensor.py  kernels.py  local_mlp.py  losses.py  model_utils.py  records.py  runtime.py  runtime_backward.py  runtime_dispatch.py  runtime_forward.py  runtime_state.py  saved_tensors.py
tests/: test_dual_tensor.py  test_modular_hvp_hooks.py  test_resnet20_backpack_compare.py  test_toy_cnn_backpack_compare.py  test_toy_mlp_backpack_compare.py
