[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "modular-hvp"
version = "0.1.0"
description = "Block-scoped Hessian-vector product runtime for eager PyTorch."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.2,<2.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch>=2.2; sys_platform != 'darwin' or platform_machine != 'x86_64'",
]

[dependency-groups]
dev = [
    "backpack-for-pytorch>=1.7.1",
    "matplotlib>=3.10.9",
    "numpy<2",
    "psutil>=7.2.2",
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
